--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,8 +33,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.FreeTTS.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.FreeTTS.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
